Fix division by zero error and improve LLM configuration
- Fixed batch_size=0 causing ZeroDivisionError in OCR processing
- Added batch size filtering to prevent invalid values
- Improved LLM service configuration with correct class names
- Enhanced debug logging with Marker commandline equivalent
- Set default pdftext_workers=1, LLM=ollama, model=llama3.2:latest
- Added comprehensive LLM functionality options
- Fixed LLM provider filtering to only pass relevant settings

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "fastmcp",
-    "marker-pdf @ git+https://github.com/datalab-to/marker.git",
+    "marker-pdf",
     "gradio",
     "torch",
     "torchvision",
@@ -23,3 +23,6 @@ allow-direct-references = true
 
 [tool.hatch.build.targets.wheel]
 packages = ["."]
+
+[tool.uv.sources]
+marker-pdf = { git = "https://github.com/datalab-to/marker" }
