feat: Add Ollama integration support across all Docker configurations
- Add OLLAMA_HOST environment variable to all Docker configs
- Configure host.docker.internal mapping for container-to-host communication
- Update Dockerfile with Ollama host configuration
- Update docker-compose.yml with extra_hosts and environment variables
- Update devcontainer Dockerfile and devcontainer.json for Ollama access
- Add comprehensive Ollama setup instructions to README
- Include troubleshooting section for Ollama connectivity issues
- Enable seamless integration between Docker containers and local Ollama server

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -49,7 +49,8 @@
     "TORCH_DEVICE": "cuda",
     "CUDA_VISIBLE_DEVICES": "0",
     "PYTHONPATH": "/workspace",
-    "DEBIAN_FRONTEND": "noninteractive"
+    "DEBIAN_FRONTEND": "noninteractive",
+    "OLLAMA_HOST": "host.docker.internal:11434"
   },
 
   // Port forwarding
@@ -83,7 +84,8 @@
 
   // GPU support
   "runArgs": [
-    "--gpus=all"
+    "--gpus=all",
+    "--add-host=host.docker.internal:host-gateway"
   ],
 
   // Workspace folder
