Fix unused variable warning in test_gradio_api_correct.py and refactor ZIP output functionality

--- a/mypy.ini
+++ b/mypy.ini
@@ -27,6 +27,9 @@ strict_equality = True
 [mypy-gradio.*]
 ignore_missing_imports = True
 
+[mypy-gradio_client.*]
+ignore_missing_imports = True
+
 [mypy-fastmcp.*]
 ignore_missing_imports = True
 
